--- a/share/setup.nsi.in
+++ b/share/setup.nsi.in
@@ -76,6 +76,7 @@ Section -Main SEC0000
     File /oname=COPYING.txt @abs_top_srcdir@/COPYING
     File /oname=readme.txt @abs_top_srcdir@/doc/README_windows_scashx.txt
     File @abs_top_srcdir@/share/examples/scashx.conf
+    File "@abs_top_srcdir@/share/examples/scashx.conf (live)"
     SetOutPath $INSTDIR\share\rpcauth
     File @abs_top_srcdir@/share/rpcauth/*.*
     SetOutPath $INSTDIR\daemon
@@ -131,6 +132,7 @@ Section /o -un.Main UNSEC0000
     Delete /REBOOTOK $INSTDIR\COPYING.txt
     Delete /REBOOTOK $INSTDIR\readme.txt
     Delete /REBOOTOK $INSTDIR\scashx.conf
+    Delete /REBOOTOK "$INSTDIR\scashx.conf (live)"
     RMDir /r /REBOOTOK $INSTDIR\share
     RMDir /r /REBOOTOK $INSTDIR\daemon
     DeleteRegValue HKCU "${REGKEY}\Components" Main
