--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -14,7 +14,7 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "ScashX"
+            VALUE "CompanyName",        "Snailcoin"
             VALUE "FileDescription",    "scashx-tx (CLI Bitcoin transaction editor utility)"
             VALUE "FileVersion",        PACKAGE_VERSION
             VALUE "InternalName",       "scashx-tx"
