--- a/share/examples/scashx.conf
+++ b/share/examples/scashx.conf
@@ -383,7 +383,7 @@
 # is an implementation detail.
 #changetype=1
 
-# The maximum feerate (in SCASHX/kvB) at which transaction building may use
+# The maximum feerate (in SNAILCOIN/kvB) at which transaction building may use
 # more inputs than strictly necessary so that the wallet's UTXO
 # pool can be reduced (default: 0.0001).
 #consolidatefeerate=<amt>
@@ -391,14 +391,14 @@
 # Do not load the wallet and disable wallet RPC calls
 #disablewallet=1
 
-# The fee rate (in SCASHX/kvB) that indicates your tolerance for discarding
+# The fee rate (in SNAILCOIN/kvB) that indicates your tolerance for discarding
 # change by adding it to the fee (default: 0.0001). Note: An output
 # is discarded if it is dust at this rate, but we will always
 # discard up to the dust relay fee and a discard fee above that is
 # limited by the fee estimate for the longest target
 #discardfee=<amt>
 
-# A fee rate (in SCASHX/kvB) that will be used when fee estimation has
+# A fee rate (in SNAILCOIN/kvB) that will be used when fee estimation has
 # insufficient data. 0 to entirely disable the fallbackfee feature.
 # (default: 0.00)
 #fallbackfee=<amt>
@@ -409,15 +409,15 @@
 # been used.
 #keypool=<n>
 
-# Spend up to this amount in additional (absolute) fees (in SCASHX) if it
+# Spend up to this amount in additional (absolute) fees (in SNAILCOIN) if it
 # allows the use of partial spend avoidance (default: 0.00)
 #maxapsfee=<n>
 
-# Fee rates (in SCASHX/kvB) smaller than this are considered zero fee for
+# Fee rates (in SNAILCOIN/kvB) smaller than this are considered zero fee for
 # transaction creation (default: 0.00001)
 #mintxfee=<amt>
 
-# Fee rate (in SCASHX/kvB) to add to transactions you send (default: 0.00)
+# Fee rate (in SNAILCOIN/kvB) to add to transactions you send (default: 0.00)
 #paytxfee=<amt>
 
 # External signing tool, see doc/external-signer.md
@@ -535,7 +535,7 @@
 # Prepend debug output with timestamp (default: 1)
 #logtimestamps=1
 
-# Maximum total fees (in SCASHX) to use in a single wallet transaction;
+# Maximum total fees (in SNAILCOIN) to use in a single wallet transaction;
 # setting this too low may abort large transactions (default: 0.10)
 #maxtxfee=<amt>
 
@@ -603,7 +603,7 @@
 # signaling (default: 0)
 #mempoolfullrbf=1
 
-# Fees (in SCASHX/kvB) smaller than this are considered zero fee for
+# Fees (in SNAILCOIN/kvB) smaller than this are considered zero fee for
 # relaying, mining and transaction creation (default: 0.00001)
 #minrelaytxfee=<amt>
 
@@ -627,7 +627,7 @@
 # Set maximum BIP141 block weight (default: 3996000)
 #blockmaxweight=<n>
 
-# Set lowest fee rate (in SCASHX/kvB) for transactions to be included in
+# Set lowest fee rate (in SNAILCOIN/kvB) for transactions to be included in
 # block creation. (default: 0.00001)
 #blockmintxfee=<amt>
 
