--- a/src/qt/res/bitcoin-qt-res.rc
+++ b/src/qt/res/bitcoin-qt-res.rc
@@ -19,8 +19,8 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "ScashX"
-            VALUE "FileDescription",    PACKAGE_NAME " (GUI node for ScashX)"
+            VALUE "CompanyName",        "Snailcoin"
+            VALUE "FileDescription",    PACKAGE_NAME " (GUI node for Snailcoin)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "scashx-qt"
             VALUE "LegalCopyright",     COPYRIGHT_STR
